--- a/app/src/main/res/layout/activity_lista_alunos.xml
+++ b/app/src/main/res/layout/activity_lista_alunos.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -11,12 +12,13 @@
         android:layout_alignParentBottom="true"
         android:layout_margin="16dp"
         android:clickable="true"
+        android:focusable="true"
         android:src="@drawable/ic_action_novo_aluno"
-        android:focusable="true"/>
+        tools:ignore="ContentDescription" />
 
     <ListView
         android:id="@+id/activity_lista_alunos_listview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent" />
 
 </RelativeLayout>
