--- a/app/src/main/res/menu/activity_formulario_aluno_menu.xml
+++ b/app/src/main/res/menu/activity_formulario_aluno_menu.xml
@@ -4,6 +4,6 @@
     <item
         android:id="@+id/activity_formulario_aluno_menu_salvar"
         android:icon="@drawable/ic_action_salvar_aluno"
-        android:title="Salvar o aluno"
+        android:title="@string/salvar_aluno"
         app:showAsAction="always" />
 </menu>
